--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,5 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,7 +24,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<span style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</span>
+		<span style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</span>
 
 		<script>
 			function openNav() {
@@ -60,9 +60,10 @@
 				
 			<p>  +2   :From Birendra vidhya Mandir <br>(science) 2014-2016.</p>
 			<p> Bachelor: Running at Nami collage.(Bsc.computing)<br> 2018  </p>
-			<p><h1>Personal Qualification</h1> Netwworking skill,keen to learn about new technology,<br>Ability to work under. pressure </p>
+			<p><h2>Personal Qualification</h2> Netwworking skill,keen to learn about new technology,<br>Ability to work under. pressure
+			 
 
-		 </p>
+		 
 		
 
 		
