--- a/module.html
+++ b/module.html
@@ -1,9 +1,10 @@
-<html>
-<head><title></title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head><title>module_gp</title></head>
 <body>
   <header>CSY1018 Web development</header>
-    <h1>Assignmet</h1>
-    <img class="mob site-image" src="images/mob site.png">
+    <h2>Assignmet</h2>
+    <img class="mob site-image" src="images/mob site.png" alt="mob site image">
     <p>i chossed my desgin template for my website form
       wix.com, where i saw Nicola Rider's website 
       desgin which seems quite attractive and simple.
@@ -20,7 +21,6 @@
       scripting tools. 
 
      <h1>My learning experince</h1>
-    </p>
     <p>
     My learning experince was awesome.
     i learn a lot of new things here.As we started
@@ -70,19 +70,19 @@ learn about the web page desging not just for our desktop but we get knowledge t
   <h1>Index page</h1>
   <p>The very first page of my website </p>     
 <img class="index_image" src="images/index.png">
-<h1>Contact page</h1>
+<h2>Contact page</h2>
 <p>The second page ,where visitor can fill the form and can give 
 there feedback about the page or website, and also they can serch my address easily by using map provided in right side of page. </p>
-<img class="contact p_image" src="images/contact p.png">
-<h1>About me </h1>
+<img class="contact p_image" src="images/contact p.png" alt="contact p image">
+<h2>About me </h2>
 <p>In this page i had provided information about me.</p>
-<img class="aboutme_image" src="images/aboutme.png">
-<h1>CV page</h1>
+<img class="aboutme_image" src="images/aboutme.png" alt="aboutme image">
+<h3>CV page</h3>
 <p>This page contain my education qulifiaction and skills</p>
-<img class="cv page_image" src="images/cv page.png">
-<h1>social page</h1>
+<img class="cv page_image" src="images/cv page.png" alt="cv page image">
+<h2>social page</h2>
 <p>Through this page, any visitor can connect with me through some of my social media. Which will help them to fast access them.</p>
-<img class="social_image" src="images/social.png">
+<img class="social_image" src="images/social.png" alt="social image">
 
 <h3>WireFrame for cellphone(Responsible)</h3>
 Responsible website briefley consedring the mobile device. As the 
@@ -91,13 +91,13 @@ so we are handed with the assigment to make a responsive website.where the css u
 <h3>Index responsive page</h3>
 <img class="hom mob_image" src="images/hom mob.png">  
 <h3>Contact responsive page</h3>
-<img class="contact mob_image" src="images/contact mob.png">
+<img class="contact mob_image" src="images/contact mob.png" alt="contact mob image">
 <h3>About me </h3>
-<img class="aboutme mob_image" src="images/aboutme mob.png">
+<img class="aboutme mob_image" src="images/aboutme mob.png" alt="aboutme mob image">
 <h3>CV responsive page</h3>
-<img class="cv mob_image" src="images/cv mob.png">
+<img class="cv mob_image" src="images/cv mob.png" alt="cv mob image">
 <h4>Social responsive page </h4>
-<img class="social mob_image" src="images/social mob.png">
+<img class="social mob_image" src="images/social mob.png" alt="social mob image">
 <h3>Implimentation</h3>
 <p>After desging the wire frame for the mobile and desktop browse 
 i had implemented all those above page together, report and module_gp too
@@ -109,38 +109,38 @@ just section part would be changing.In main.css I had use csss for contact page 
 main.css All those below images provided are build by using html validation proof.I had use animation part in section part of 
 home page by help of w3school.</p>
 <h3>Home Page</h3>
-<img class="home ss_image" src="images/home ss.png">
+<img class="home ss_image" src="images/home ss.png" alt="home ss image">
 <p>desktop screen</p>
 <br>
-<img class="hom ss_image" src="images/hom ss.png">
+<img class="hom ss_image" src="images/hom ss.png" alt="hom ss image">
  <p>Responsive sight </p>
  <h3>Html validation</h3>
  <h3>Assessibility check</h3>
  <h3>contact</h3>
- <img  class="cont dsk ss_image" src="images/cont dsk ss.png">
+ <img  class="cont dsk ss_image" src="images/cont dsk ss.png" alt="cont dsk ss image">
  <p>desktop screen</p>
- <img class="con mob ss_image" src="images/con mob ss.png">
+ <img class="con mob ss_image" src="images/con mob ss.png" alt="con mob ss image">
  <p>Responsive sight</p>
  <h1>Html validation</h1>
  <h4>Assessibility check</h4>
  <h5>About me </h5>
- <img class="about ss_image" src="images/about ss.png">
+ <img class="about ss_image" src="images/about ss.png" alt="about ss image">
  <p>desktop screen</p>
- <img class="about dskss_image" src="images/about dskss.png">
+ <img class="about dskss_image" src="images/about dskss.png" alt="about dskss image">
  <p>Responsive sight</p>
  <h5>Html validation</h5>
  <h4>Assessibility check</h4>
  <h4>CV</h4>
- <img class="cv dsk_image" src="images/cv dsk.png">
+ <img class="cv dsk_image" src="images/cv dsk.png" alt="cv dsk image">
 <p>desktop screen</p>
-<img class="cv res_image" src="images/cv res.png">
+<img class="cv res_image" src="images/cv res.png" alt="cv res image">
 <p>mobile screen</p>
 <h4>Html validation</h4>
 <h4>Assessibility check</h4>
 <h4>Social</h4>
-<img class="social dsks_image" src="images/social dsks.png">
+<img class="social dsks_image" src="images/social dsks.png" alt="social dsks image">
 <p>desktop screen</p>
-<img class="social ss_image" src="images/social ss.png">
+<img class="social ss_image" src="images/social ss.png" alt="social ss image">
 <p>Responsive sight</p>
 <h4>Html validation</h4>
 <h4>Assessibility check</h4>
