--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,7 +24,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<div class="hamburger" style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</div>
+		<div class="hamburger" style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</div>
 
 		<script>
 			function openNav() {
@@ -84,8 +84,6 @@
 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14128.02789405721!2d85.3178601699999!3d27.71707096421431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2snp!4v1524081799080" width="400" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
-
-</div>
 </section>
 
 <footer class="footer">
