--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
@@ -17,14 +18,14 @@
 	
 	<div class="header-second">
 	<div id="mySidenav" class="Sidenav">
-		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a href="javascript:void(0)" class="closebtn"  onclick="closeNav()">&times;</a>
 		<a href="index.html">Home</a>
 		<a href="contact.html">Contact</a>
 		<a href="Aboutme.html">About me</a>
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<div class="hamburger" style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</div>
+		<div class="hamburger" style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</div>
 
 		<script>
 			function openNav() {
@@ -43,15 +44,15 @@
 <section class="section">
 
 	<div class="section-first">
-		<img class="index-image" src="images/index.jpg">
+		<img class="index-image" src="images/index.jpg" alt="home page image">
 	</div>
 	<div class="section-second">
 		
 	
-			<h1>Hello!</h1>
+			<h2>Hello!</h2>
 		
 		
-			<h2>It's me Shivani</h2>
+			<h3>It's me Shivani</h3>
 			
 																											
 </div>
