--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-	<html lang="en">
+
+	<html>
 <head><title>index</title>
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,7 +24,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<div class="hamburger" style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</div>
+		<div class="hamburger" style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</div>
 
 		<script>
 			function openNav() {
@@ -42,13 +42,12 @@
 </header>
 <section class="aboutme-section">
 	<div class="aboutme-section-first">
-		<h3>About me .</h3>
+		<h1>About me .</h1>
 	</div>
 
 	<div class="aboutme-section-second">
 		<div class="aboutMe-image">
-			<img class="aboutq-image" src="images/aboutMe.jpg" alt="About me page image">
-			 
+			<img class="aboutq-image" src="images/aboutMe.jpg"/>
 	
 		</div>
          
