--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-	<html lang="en">
+
+	<html>
 <head><title>index</title>
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,7 +7,6 @@
 	
 </head>
 <body>
-	
 	
 <header class="header">
 	<div class="header-first">
@@ -24,7 +23,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<div class="hamburger" style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</div>
+		<div class="hamburger" style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</div>
 
 		<script>
 			function openNav() {
@@ -85,7 +84,6 @@
 </div>
 
 </section>
-
 <footer class="footer">
 <div class="footer-first">shivaniporwal558@gmail.com</div>
 <div class="footer-second">+9779803950985</div>
