--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-	<html lang="en">
+
+	<html>
 <head><title>index</title>
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,8 +7,6 @@
 	
 </head>
 <body>
-	
-	
 <header class="header">
 	<div class="header-first">
 		<div class="header-first-first"><h1>Shivani purwar<br>IT Student /NAMI Collage</h1></div>
@@ -24,7 +22,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<span style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</span>
+		<span style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</span>
 
 		<script>
 			function openNav() {
