--- a/module.html
+++ b/module.html
@@ -144,3 +144,7 @@ home page by help of w3school.</p>
 <p>Responsive sight</p>
 <h4>Html validation</h4>
 <h4>Assessibility check</h4>
+<h4>Conclusion</h4>
+<p>Finally arranging all pages systematically here my personal website 
+is ready. To validate my website i had use w3 validation for all the pages html 
+and there css as well as those all pages are tested for assessibility. </p>
