--- a/social.html
+++ b/social.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-	<html lang="en">
+
+	<html>
 <head><title>index</title>
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,8 +7,8 @@
 	
 </head>
 <body>
-	
-	
+		
+		
 <header class="header">
 	<div class="header-first">
 		<div class="header-first-first"><h1>Shivani purwar <br>IT Student/NAMI Collage</h1></div>
@@ -88,10 +88,12 @@
 </div>
 
 </section>
+
 <footer class="footer">
 <div class="footer-first">shivaniporwal558@gmail.com</div>
 <div class="footer-second">+9779803950985</div>
 <div class="footer-third">@copyright</div>
 </footer>
+
 </body>
 </html>
