--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-	<html lang="en">
+
+	<html>
 <head><title>index</title>
-	<meta charset="utf-8">
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
 	
 </head>
 <body>
-	
 	
 <header class="header">
 	<div class="header-first">
@@ -58,7 +56,6 @@
 </div>
 
 </section>
-
 <footer class="footer">
 <div class="footer-first">shivaniporwal558@gmail.com</div>
 <div class="footer-second">+9779803950985</div>
