--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,7 +1,7 @@
 
 	<html>
 <head><title>index</title>
-	<link rel="stylesheet" href ="main.css" >
+	<link rel="stylesheet" href ="main.css" type="text/css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
 	
