--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,7 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
@@ -22,7 +23,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<span style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</span>
+		<span style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</span>
 
 		<script>
 			function openNav() {
