--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-
-	<html>
+<!DOCTYPE HTML>
+	<html lang="en">
 <head><title>index</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href ="main.css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
