--- a/social.html
+++ b/social.html
@@ -1,7 +1,9 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
-	<link rel="stylesheet" href ="main.css" >
+
+<meta charset="utf-8">
+	<link rel="stylesheet" href ="main.css" type="text/css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
 	
