--- a/module.html
+++ b/module.html
@@ -115,6 +115,7 @@ home page by help of w3school.</p>
 <img class="hom ss_image" src="images/hom ss.png" alt="hom ss image">
  <p>Responsive sight </p>
  <h3>Html validation</h3>
+ <img class="ind_images" src="images/ind.png">
  <h3>Assessibility check</h3>
  <h3>contact</h3>
  <img  class="cont dsk ss_image" src="images/cont dsk ss.png" alt="cont dsk ss image">
@@ -122,6 +123,7 @@ home page by help of w3school.</p>
  <img class="con mob ss_image" src="images/con mob ss.png" alt="con mob ss image">
  <p>Responsive sight</p>
  <h1>Html validation</h1>
+ <img class="contacct_image" src="image/contacct.png">
  <h4>Assessibility check</h4>
  <h5>About me </h5>
  <img class="about ss_image" src="images/about ss.png" alt="about ss image">
@@ -129,6 +131,7 @@ home page by help of w3school.</p>
  <img class="about dskss_image" src="images/about dskss.png" alt="about dskss image">
  <p>Responsive sight</p>
  <h5>Html validation</h5>
+ <img class="abt_image" src="images/abt.png">
  <h4>Assessibility check</h4>
  <h4>CV</h4>
  <img class="cv dsk_image" src="images/cv dsk.png" alt="cv dsk image">
@@ -143,6 +146,7 @@ home page by help of w3school.</p>
 <img class="social ss_image" src="images/social ss.png" alt="social ss image">
 <p>Responsive sight</p>
 <h4>Html validation</h4>
+<img class="sociall_image" src="images/sociall.png">
 <h4>Assessibility check</h4>
 <h5>Navigation bar</h5>
 <img class="nav_image" src="images/nav.png" alt="nav image">
