--- a/Aboutme.html
+++ b/Aboutme.html
@@ -1,6 +1,7 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href ="main.css" type="text/css">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
@@ -24,7 +25,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<div class="hamburger" style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</div>
+		<div class="hamburger" style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</div>
 
 		<script>
 			function openNav() {
@@ -42,12 +43,12 @@
 </header>
 <section class="aboutme-section">
 	<div class="aboutme-section-first">
-		<h1>About me .</h1>
+		<h2>About me .</h2>
 	</div>
 
 	<div class="aboutme-section-second">
 		<div class="aboutMe-image">
-			<img class="aboutq-image" src="images/aboutMe.jpg"/>
+			<img class="aboutq-image" src="images/aboutMe.jpg" alt="about me image"/>
 	
 		</div>
          
