--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
-
-	<html>
+<!DOCTYPE html>
+	<html lang="en">
 <head><title>index</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href ="main.css" type="text/css" >
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
@@ -23,7 +24,7 @@
 		<a href="cv.html">CV</a>
 		<a href="social.html">Social</a>
 	</div>
-		<div class="hamburger" style="font-size:40px;cursor: pointer"onclick="openNav()">&#9776;</div>
+		<div class="hamburger" style="font-size:40px;cursor: pointer" onclick="openNav()">&#9776;</div>
 
 		<script>
 			function openNav() {
